synthv1 - an old-school polyphonic synthesizer
----------------------------------------------

ChangeLog

SVN TRUNK

- Preparations for Qt5 migration. (TESTING)


0.3.0  2012-12-21  Third coming release.

- Dropped all SSE dummy build optimization flags as they were
  making more harm than real good, performance wise.
- GUI layout moved from a toolbox into a stacked tab widget;
  also, a status-bar has been added at the bottom display.
- LV2 Atom/MIDI event processing is now official, a replacement
  for the formerly deprecated LV2 Event/MIDI specification.
- Added dirty checking also on switching from unamed presets.
- JACK stand-alone: preset loader initialization fix.


0.2.0  2012-11-22  Second public release.

- Parameters A/B comparison toggle buttons have been added.
- Keep LV2 event buffer valid on each run(), as found for strict
  LV2 specification and compliance (as suggested by falkTX).
- Increased polyphony baseline from 24 to 32 voices.
- Prepared for relative paths from preset file references.
- Velocity sensitivity configuration control has been added.
- Reset (all values to preset defaults) button has been added.
- Slight minor fix on fast-release re-triggering.
- Added some command line options to the stand-alone JACK client
  program (--help and --version information).
- Reimplemented mouse-wheel stepping on combo-dial knob widgets.
- Detached generic double-linked list class into its own header.


0.1.1  2012-09-24  One first bug-fix release.

- Fixed a crash bug on LV2 main widget close (GUI) due to some
  superfluous preset dirty checking.
- Fixed a nasty rather fundamental bug introduced by late voice
  list optimization, which was seriously crippled and noticeable
  when more than one LV2 plug-in were being instantiated.


0.1.0  2012-09-10  First true official release.

- Preset drop-down list is now sorted.
- Migrated to sourceforge.net.


0.0.9  2012-08-27  Post-vacation relax.

- Main widget now a plain basic QWidget, instead of QDialog.