@@ -948,9 +948,10 @@
 		lv2:index 110 ;
 		lv2:symbol "DEL1_BPM" ;
 		lv2:name "Delay BPM" ;
-		lv2:default 1.8 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 3.6 ;
+		lv2:default 180.0 ;
+		lv2:minimum 3.6 ;
+		lv2:maximum 360.0 ;
+		lv2:designation lv2time:beatsPerMinute ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
