@@ -1,7 +1,7 @@
 // synthv1widget_lv2.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2013, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -43,9 +43,14 @@ void synthv1widget_lv2::port_event ( uint32_t port_index,
 	uint32_t buffer_size, uint32_t format, const void *buffer )
 {
 	if (format == 0 && buffer_size == sizeof(float)) {
+		synthv1::ParamIndex index
+			= synthv1::ParamIndex(port_index - synthv1_lv2::ParamBase);
 		float fValue = *(float *) buffer;
-		setParamValue(synthv1::ParamIndex(
-			port_index - synthv1_lv2::ParamBase), fValue);
+	//--legacy support < 0.3.0.4 -- begin
+		if (index == synthv1::DEL1_BPM && fValue < 3.6f)
+			fValue *= 100.0f;
+	//--legacy support < 0.3.0.4 -- end.
+		setParamValue(index, fValue);
 	}
 }
 
